Core: Minor code improvements